[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/TempleBlocks/chain_mid.png" type="Texture" id=1]
[ext_resource path="res://src/Platforms/LongChains.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 3 )

[node name="LongChains" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )

[node name="Chain1" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Chain2" type="Sprite" parent="."]
position = Vector2( -16, 0 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Chain3" type="Sprite" parent="."]
position = Vector2( 16, 0 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Chain4" type="Sprite" parent="."]
position = Vector2( 32, 0 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 0 )
shape = SubResource( 1 )

[node name="Player" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 8, -5 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
